[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ship/Junker/junker.png" type="Texture" id=1]
[ext_resource path="res://Ship/Junker/JunkerCollision.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.6417, 29.9649 )

[sub_resource type="CircleShape2D" id=3]
radius = 55.0364

[sub_resource type="RayShape2D" id=4]
length = 20.2899

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="JunkerCollision" type="RigidBody2D"]
collision_layer = 524288
collision_mask = 524288
mass = 10.0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.361687, 0.0770078 )
rotation = 3.14159
scale = Vector2( 0.244044, 0.244044 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.2361, 0.460754 )
shape = SubResource( 2 )

[node name="InteractionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
position = Vector2( 1.15109, 0.938053 )
shape = SubResource( 3 )

[node name="ExitArea1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea1"]
position = Vector2( -0.0146942, -32.6302 )
rotation = 3.07721
shape = SubResource( 4 )

[node name="ExitArea2" type="Area2D" parent="."]
position = Vector2( -0.700722, 0.732871 )
rotation = 3.12272

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2"]
position = Vector2( -0.0146942, -32.6302 )
rotation = 3.07721
shape = SubResource( 4 )

[node name="Thrusters" type="Node2D" parent="."]

[node name="BackThruster" type="AnimatedSprite" parent="Thrusters"]
position = Vector2( 106.956, 1.10265 )
scale = Vector2( 1.21823, 0.52908 )
frames = SubResource( 5 )

[node name="LeftThruster" type="AnimatedSprite" parent="Thrusters"]
position = Vector2( 20.2151, 59.5426 )
scale = Vector2( 0.368279, 0.839198 )
frames = SubResource( 6 )

[node name="RighThruster" type="AnimatedSprite" parent="Thrusters"]
position = Vector2( 23.523, -58.44 )
scale = Vector2( 0.402736, 0.850684 )
frames = SubResource( 7 )

[node name="FrontThruster" type="AnimatedSprite" parent="Thrusters"]
position = Vector2( -93.7245, 14.3343 )
scale = Vector2( 0.804741, 0.322335 )
frames = SubResource( 8 )
[connection signal="body_entered" from="InteractionZone" to="." method="_on_InteractionZone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_InteractionZone_body_exited"]
